--- a/MapNeigh/MapNeigh/Info.plist
+++ b/MapNeigh/MapNeigh/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Map deseja ter acesso a sua localização</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Map deseja ter acesso a sua localização</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Map deseja ter acesso a sua localização</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
