--- a/MapNeigh/Podfile
+++ b/MapNeigh/Podfile
@@ -8,6 +8,6 @@ target 'MapNeigh' do
     # Pods for MapNeigh
   pod 'SwifterSwift'            # All Extensions
   pod 'CameraManager', '~> 4.0'
-
+  pod 'Firebase/Core'
 
 end
