--- a/MapNeigh/MapNeigh/Info.plist
+++ b/MapNeigh/MapNeigh/Info.plist
@@ -2,18 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Para ver suas emoções, o app nao salvará nem compartilhará sua foto</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Para ver suas emoções, o app nao salvará nem compartilhará sua foto</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Map deseja ter acesso a sua localização</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Map deseja ter acesso a sua localização</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Map deseja ter acesso a sua localização</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>EmoShare</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -30,6 +22,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Para ver suas emoções, o app nao salvará nem compartilhará sua foto</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Map deseja ter acesso a sua localização</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Map deseja ter acesso a sua localização</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Map deseja ter acesso a sua localização</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Para ver suas emoções, o app nao salvará nem compartilhará sua foto</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,8 +43,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
